--- a/package.json
+++ b/package.json
@@ -3,19 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
+    "kill-port": "^2.0.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-github-calender": "^1.1.0",
+    "react-hook-form": "^7.51.4",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.2.0",
+    "react-parallax-tilt": "^1.7.225",
+    "react-pdf": "^8.0.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "kill-port 3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "run": "react-scripts nodemon run"
+  
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
